test/bad/identifier1.prog
/*missing identifier
*/

f x = g (x + 1)
